Added documentation for making Inquirer GUI consumable as a Web Component

--- a/demo.html
+++ b/demo.html
@@ -18,7 +18,7 @@
         },
         {
             name: "lastName",
-            message: "Last Name (Funamental)",
+            message: "Last Name (Fundamental)",
             default: "Bond",
             guiOptions: {
                 type: "input-fundamental"
