Added Fundamental-styled confirm question type

--- a/web-component-demo.html
+++ b/web-component-demo.html
@@ -83,6 +83,15 @@ inquirer-gui {
             }
         },
         {
+            type: "confirm",
+            name: "confirmation",
+            message: "Please confirm",
+            default: true,
+            guiOptions: {
+                type: "confirm-fundamental"
+            }
+        },        
+        {
             name: "fruit",
             type: "list",
             message: "Select a fruit (Fundamental)",
