--- a/web-component-demo.html
+++ b/web-component-demo.html
@@ -83,6 +83,16 @@ inquirer-gui {
             }
         },
         {
+            type: "expand",
+            name: "expand1",
+            message: "A list",
+            choices: ["USA", { name: "Germany", value: "DE" }, "China", "Israel"],
+            default: "DE",
+            guiOptions: {
+                type: "expand-fundamental"
+            }
+        },
+        {
             type: "confirm",
             name: "confirmation",
             message: "Please confirm",
