Started implementing theming (fundamental vs. vscode)

--- a/web-component-demo.html
+++ b/web-component-demo.html
@@ -26,7 +26,9 @@ inquirer-gui {
 }
 </style>
 
-<inquirer-gui></inquirer-gui>
+<inquirer-gui
+  theme="fundamental"
+></inquirer-gui>
 
 <script>
     const elements = document.getElementsByTagName("inquirer-gui");
