feat: modified vscode sample styles to look more like vscode

--- a/sample-web-component/index.html
+++ b/sample-web-component/index.html
@@ -114,7 +114,7 @@
                     type: "confirm",
                     name: "confirmation",
                     message: "Please confirm",
-                    default: true,
+                    default: false,
                 },
                 {
                     name: "editor1",
